--- a/lib/scorm_web/templates/quiz/new.html.eex
+++ b/lib/scorm_web/templates/quiz/new.html.eex
@@ -2,7 +2,7 @@
     <div class="ui list">
         <div class="item">
             <i class="download icon"></i>
-            <%= link "Скачать модуль", to: "/files/quiz.zip", class: "content" %>
+            <%= link "Скачать модуль", to: "/files/#{@file_name}.zip", class: "content" %>
         </div>
         <div class="item">
             <%= link "назад", to: "/quiz", class: "content" %>
