--- a/lib/scorm_web/templates/page/index.html.eex
+++ b/lib/scorm_web/templates/page/index.html.eex
@@ -1,2 +1,6 @@
 <h2 class="ui header">SCORM модули</h2>
-<%= link "quiz", to: "/quiz"%>
+<div class="ui link list">
+    <%= link "quiz", to: "/quiz", class: "item"%>
+    <%= link "Муха", to: "/fly", class: "item"%>
+    <%= link "Буквы", to: "/letters", class: "item"%>
+</div>
